kubernetes/template/deployment.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streetdavid
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  rules:
    - host: ""
      http:
        paths:
               - path: /orders
                 pathType: Prefix
                 backend:
                   service:
                     name: orderManagement
                     port:
                       number: 8080
               - path: /productDeliveries
                 pathType: Prefix
                 backend:
                   service:
                     name: deliveryManagement
                     port:
                       number: 8080
               - path: /inventoryManagements
                 pathType: Prefix
                 backend:
                   service:
                     name: inventoryManagement
                     port:
                       number: 8080
               - path: /messages
                 pathType: Prefix
                 backend:
                   service:
                     name: myPage
                     port:
                       number: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderManagement
  labels:
    app: orderManagement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderManagement
  template:
    metadata:
      labels:
        app: orderManagement
    spec:
      containers:
        - name: orderManagement
          image: username/orderManagement:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deliveryManagement
  labels:
    app: deliveryManagement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deliveryManagement
  template:
    metadata:
      labels:
        app: deliveryManagement
    spec:
      containers:
        - name: deliveryManagement
          image: username/deliveryManagement:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventoryManagement
  labels:
    app: inventoryManagement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventoryManagement
  template:
    metadata:
      labels:
        app: inventoryManagement
    spec:
      containers:
        - name: inventoryManagement
          image: username/inventoryManagement:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myPage
  labels:
    app: myPage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myPage
  template:
    metadata:
      labels:
        app: myPage
    spec:
      containers:
        - name: myPage
          image: username/myPage:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5


---


apiVersion: v1
kind: Service
metadata:
  name: orderManagement
  labels:
    app: orderManagement
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: orderManagement


---


apiVersion: v1
kind: Service
metadata:
  name: deliveryManagement
  labels:
    app: deliveryManagement
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: deliveryManagement


---


apiVersion: v1
kind: Service
metadata:
  name: inventoryManagement
  labels:
    app: inventoryManagement
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: inventoryManagement


---


apiVersion: v1
kind: Service
metadata:
  name: myPage
  labels:
    app: myPage
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: myPage
